[gd_scene load_steps=5 format=3 uid="uid://8scil65ms5nn"]

[ext_resource type="Script" path="res://ui/hut_ability_buttons/RepairAbilityButton/repair_ability_button.gd" id="1_8lfwc"]
[ext_resource type="Texture2D" uid="uid://lyd00382xu38" path="res://ui/hut_ability_buttons/RepairAbilityButton/normal.png" id="2_ntreh"]
[ext_resource type="Texture2D" uid="uid://dndd64u8jk11y" path="res://ui/hut_ability_buttons/RepairAbilityButton/pressed.png" id="3_88qw7"]
[ext_resource type="Texture2D" uid="uid://8oy8850ly2r3" path="res://ui/hut_ability_buttons/RepairAbilityButton/disabled.png" id="4_5uroi"]

[node name="RepairAbilityBotton" type="Control"]
layout_mode = 3
anchors_preset = 0
scale = Vector2(0.8, 0.8)
script = ExtResource("1_8lfwc")

[node name="RepairButton" type="TextureButton" parent="."]
custom_minimum_size = Vector2(80, 80)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("2_ntreh")
texture_pressed = ExtResource("3_88qw7")
texture_disabled = ExtResource("4_5uroi")
ignore_texture_size = true
stretch_mode = 0

[node name="AbilityTimer" type="Timer" parent="."]
wait_time = 20.0
one_shot = true

[connection signal="pressed" from="RepairButton" to="." method="_on_repair_button_pressed"]
[connection signal="timeout" from="AbilityTimer" to="." method="_on_ability_timer_timeout"]
